k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anna-gen2
  namespace: anna
spec:
  selector:
    app: anna-gen2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
