k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anna
  namespace: anna
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - anna.bytor.co
      secretName: anna-bytor-co-tls
  rules:
    - host: anna.bytor.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anna-gen2
                port:
                  number: 80
